AV-1122: Fix extra padding top on primary content

--- a/modules/ytp-assets-common/src/less/components/layout.less
+++ b/modules/ytp-assets-common/src/less/components/layout.less
@@ -303,6 +303,12 @@ body {
   }
 }
 
-.sidebar ~ .primary .page-container {
-  margin-top: 0;
+.sidebar ~ .primary {
+  .page-container {
+    margin-top: 0;
+  }
+
+  > .module > .module-content:not(#just-increase-specificity) {
+    padding-top: 0;
+  }
 }
